# lost

./: .clang-tidy  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Brewfile  CBOR-SCHEMA.md  CMakeLists.txt  CREDITS  DC_SPUR_MITIGATION.md  DIAGRAMS.md  LICENSE  README.md  cliff.toml  pyproject.toml  toolchain.cmake
.github/workflows/: _cross-build.yml  ci-aarch64.yml  ci-arm64.yml  ci-armv7.yml  release.yml
apps/: CMakeLists.txt  ConsoleSink.hpp  DualRadioSource.hpp  FrameSink.hpp  RadioSink.hpp  RadioSource.hpp  SoapySink.hpp  SoapySource.hpp  TxQueueSource.hpp  cbor.hpp  common.hpp  config-iio-local.toml  config-iio-remote.toml  config-pluto.toml  config-tezuka.toml  config-uhd.toml  config.cpp  config.hpp  config.toml  graph_builder.hpp  iio_smoke.cpp  lora_loopback.cpp  lora_loopback_soapy.cpp  lora_rx.cpp  lora_rx_soapy.cpp  lora_scan.cpp  lora_scanner.cpp  lora_trx.cpp  lora_tx.cpp  lora_tx_soapy.cpp  radio_bridge.h  soapy_c_bridge.c  soapy_c_bridge.h  soapy_radio_bridge.c  timestamp.hpp  tx_implicit.cpp  tx_worker.cpp  tx_worker.hpp  udp_state.hpp  uhd_radio_bridge.c
apps/protocol/: meshcore.hpp
apps/test-configs/: b210-vs-pluto.toml  b220-baseline.toml
benchmarks/: CMakeLists.txt  bm_lora_algorithms.cpp  bm_lora_decode.cpp  bm_lora_phy.cpp
blocks/: CMakeLists.txt
blocks/include/gnuradio-4.0/lora/: BurstDetector.hpp  CaptureSink.hpp  ChannelActivityDetector.hpp  DCBlockerBlock.hpp  DemodDecoder.hpp  DiversityCombiner.hpp  FrameSink.hpp  FrameSync.hpp  FreqXlatingDecimator.hpp  MultiSfDecoder.hpp  ScanController.hpp  ScanSink.hpp  SpectrumTap.hpp  SpectrumTapBlock.hpp  Splitter.hpp  SymbolDemodulator.hpp  TxQueueSource.hpp  WidebandDecoder.hpp  cbor.hpp  log.hpp  tx_burst_taper.hpp
blocks/include/gnuradio-4.0/lora/algorithm/: Channelize.hpp  DCBlocker.hpp  GrayPartition.hpp  HalfBandDecimator.hpp  L1Detector.hpp  PreambleId.hpp  RingBuffer.hpp  SfLane.hpp  SfLaneDetail.hpp  SpectrumTap.hpp  Telemetry.hpp  crc.hpp  firdes.hpp  hamming.hpp  interleaving.hpp  tables.hpp  tx_chain.hpp  utilities.hpp
blocks/include/gnuradio-4.0/lora/detail/: ChirpRefs.hpp  FftPool.hpp
blocks/include/gnuradio-4.0/lora/phy/: AntennaCombiner.hpp  CssDemod.hpp  DecodeChain.hpp  PreambleSync.hpp  Types.hpp
blocks/include/gnuradio-4.0/lora/scan/: VangelistaThreshold.hpp
blocks/include/gnuradio-4.0/soapy/: SoapySink.hpp
cmake/: toolchain-aarch64-bootlin.cmake  toolchain-armv7-bootlin.cmake  toolchain-macos-homebrew-llvm.cmake
data/baselines/: scan_baseline_20260326.md
docs/: ad9361-overclock.patch  cbor-schemas.md  deploy-tezuka.md  lora-protocols.md
docs/plans/: 2026-03-07-rx-enhancements-design.md  2026-03-08-fix-watchdog-logging.md
patches/: ad9361-overclock.patch
scripts/: README.md  conftest.py  dc_ab_test.py  dc_diag.py  lint.sh  lora_agg.py  lora_common.py  lora_dashboard.sh  lora_decode_lorawan.py  lora_decode_meshcore.py  lora_decode_meshtastic.py  lora_decode_raw.py  lora_duckdb.py  lora_mon.py  lora_mqtt.py  lora_perf.py  lora_spectrum.py  lora_test.py  lora_trx.lua  lora_waterfall.py  lora_wav.py  meshcore_bridge.py  meshcore_crypto.py  meshcore_tx.py  scan_test.py  scan_test.sh  serial_bridge.py  test_bridge_live.py  test_lora_agg.py  test_lora_mon.py  test_lora_mqtt.py  test_lora_test.py  test_meshcore_bridge.py  test_meshcore_bridge_integration.py  test_meshcore_crypto.py  test_meshcore_integration.py  test_meshcore_tx.py  test_multisf_hardware.py  test_trx_perf.py  trx_ab_loop.py  (+2 more)
scripts/apps/: aclr_tx.py  bridge_live_test.py  dc_diag.py  lora_agg.py  lora_decode_lorawan.py  lora_decode_meshcore.py  lora_decode_meshtastic.py  lora_decode_raw.py  lora_duckdb.py  lora_mon.py  lora_perf.py  lora_spectrum.py  lora_test.py  lora_waterfall.py  lora_wav.py  meshcore_bridge.py  meshcore_tx.py  serial_bridge.py  trx_perf.py
scripts/cal/: _render_power_level.py  aclr_sa.py  sdr_pwr_cal.py  tinysa.py
scripts/channels/: hansemesh.channel  public.channel
scripts/lib/: cbor_stream.py  lora_common.py  meshcore_crypto.py
scripts/lora_spectrum/: __init__.py  __main__.py  config.py  input_handler.py  main.py  protocol.py  renderer.py  state.py
scripts/tests/: conftest.py  test_bridge_live.py  test_lora_agg.py  test_lora_mon.py  test_lora_test.py  test_meshcore_bridge.py  test_meshcore_bridge_integration.py  test_meshcore_crypto.py  test_meshcore_integration.py  test_trx_perf.py
spec/: meshcore-bridge.allium  test-harness.allium
test/: CMakeLists.txt  generate_vectors.cpp  qa_SoapySink.cpp  qa_lora_algorithms.cpp  qa_lora_antenna_combiner.cpp  qa_lora_burst.cpp  qa_lora_cad.cpp  qa_lora_cbor.cpp  qa_lora_channelizer.cpp  qa_lora_config.cpp  qa_lora_css_demod.cpp  qa_lora_dc_blocker.cpp  qa_lora_decode_chain.cpp  qa_lora_diversity.cpp  qa_lora_framesink.cpp  qa_lora_graph_builder.cpp  qa_lora_graph_builder_iio.cpp  qa_lora_half_band_decimator.cpp  qa_lora_l1_detector.cpp  qa_lora_lib_pipeline.cpp  qa_lora_loopback.cpp  qa_lora_multisf.cpp  qa_lora_phase3.cpp  qa_lora_preamble_id.cpp  qa_lora_preamble_sync.cpp  qa_lora_primitives.cpp  qa_lora_rx.cpp  qa_lora_scan.cpp  qa_lora_scan_classification.cpp  qa_lora_sinks.cpp  qa_lora_splitter.cpp  qa_lora_tag_forwarding.cpp  qa_lora_trx_worker.cpp  qa_lora_tx.cpp  qa_lora_tx_queue.cpp  qa_lora_udp.cpp  qa_lora_vangelista.cpp  qa_lora_wideband.cpp  qa_soapy_loopback.cpp  test_helpers.hpp
test_vectors/: config.json  generate.py  tx_04_encoded.u8  tx_07_iq_frame.cf32
test_vectors/sf10_cr1_bw125000/: config.json  tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr1_bw62500/: config.json  payload.txt  tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr2_bw125000/: config.json  tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr2_bw62500/: config.json  tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr3_bw125000/: config.json  (+3 more)
tests/: conftest.py  test_cli.py  test_cli_inproc.py
(+305 files in other folders)
