[project]
name = "gr4-lora"
version = "0.2.0"
description = "LoRa PHY for GNU Radio 4 — receiver software"
requires-python = ">=3.14"
dependencies = [
    "cbor2>=6.0.0rc1",
    "duckdb",
    "pynacl",
    "pycryptodome",
    "segno",
    "paho-mqtt",
    "sounddevice",
    "numpy>=2.4.2",
    "pyserial>=3.5",
    "setproctitle",
    # meshcore-cli PyPI: companion-device control (TCP/serial) used by
    # lora.hwtests harness to drive Heltec V3 during bench A/B.
    "meshcore>=2.3",
]

[project.scripts]
lora = "lora.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "hypothesis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/src/lora"]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.pytest.ini_options]
pythonpath = ["scripts/src", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-q"]
markers = [
    "slow: marks tests as slow — opt-in via -m slow (the 1000-iter SIGHUP storm)",
]

[tool.coverage.run]
# Pure-display helpers under lora.core.* (formatters / cbor_stream /
# logging / meshcore_uri) are exercised through their consumers
# (lora.viz.mon, lora.daemon, etc.); excluding them from the direct
# lora.core coverage measurement keeps the gate honest.
omit = [
    "scripts/src/lora/core/formatters.py",
    "scripts/src/lora/core/cbor_stream.py",
    "scripts/src/lora/core/logging.py",
    "scripts/src/lora/core/meshcore_uri.py",
]

[tool.ruff]
src = ["scripts/src"]
target-version = "py314"
extend-exclude = [
    "gnuradio4",
    "build",
    "build_*",
    ".venv",
]

[tool.ruff.lint]
extend-select = ["I"]   # isort

[tool.pyright]
include = ["scripts/src", "tests"]
extraPaths = ["scripts/src"]
exclude = [
    "gnuradio4",
    "build",
    "build_*",
    ".venv",
    "**/__pycache__",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
